# clever-cloud-desktop

./: .gitignore  README.md  intro.md  pyproject.toml  requirements.txt  test_apps_addons.py  todo.md
src/clever_desktop/: __init__.py  __main__.py  app.py  config.py  logging_config.py  main.py  settings.py
src/clever_desktop/api/: auth.py  client.py  oauth1_auth.py  token_auth.py
src/clever_desktop/core/: __init__.py  app.py  logging_config.py  settings.py
src/clever_desktop/models/: config.py
src/clever_desktop/resources/: __init__.py
src/clever_desktop/ui/: addons_panel.py  applications_panel.py  dashboard.py  login_dialog.py  logs_panel.py  main_window.py  network_groups_panel.py  settings_panel.py  sidebar.py  splash_screen.py
src/clever_desktop/widgets/: addons_page.py  applications_page.py  dashboard.py  dashboard_page.py  login_dialog.py  main_window.py  network_groups_page.py  simple_token_dialog.py  splash_screen.py  token_dialog.py
